# serde_compact

./: Cargo.toml  README.md
src/: lib.rs
tests/: basic_tests.rs
