[package]
name = "serde-struct-compact"
description = "Derive Serialize and Deserialize without struct member names"
keywords = ["serde", "derive", "serialization", "macro"]
categories = ["encoding"]
repository = "https://github.com/ericseppanen/serde_compact"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
version = "0.1.0"
edition = "2018"

[features]
with-testme = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
#trybuild = "1.0"
serde_test = "1.0"
